[package]
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]
categories = ["embedded-hal-driver", "embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the DS3231 real-time clock"
keywords = ["embedded-hal", "embedded-hal-driver", "rtc"]
license = "MIT OR Apache-2.0"
name = "ds3231"
repository = "https://github.com/wose/ds3231"
version = "0.1.0"

[dependencies]
embedded-hal = "0.1.0"

[dev-dependencies]
chrono = "0.4.0"
linux-embedded-hal = "0.1.1"